# yamaha-wavecard-format

./: CMakeLists.txt  LICENSE  README.md  README.org  minirc.wave-blade
src/: structs.hpp  sywave.cpp  util.hpp
